test/Fail/FunSort-X-SSetOmega-SetOmega.err
FunSort-X-SSetOmega-SetOmega.agda:6.13-18: error: [UnequalTypes]
The types
  Setω
and
  funSort _3 SSetω
are not equal
when checking that the expression A → B has type Setω
